src/main/java/org/example/liskovsubstitution/good/CreditCardLoan.java
package org.example.liskovsubstitution.good;

public class CreditCardLoan implements LoanPayment {
    @Override
    public void doPayment() {

    }
}
